k8s/social_connect/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-connect
  labels:
    app: social-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-connect
  template:
    metadata:
      labels:
        app: social-connect
    spec:
      containers:
        - image: shiprashalini/social_connect:latest
          name: social-connect
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: gunicorn
